# cultural-heritage-collages

./: .cursor-rules.yaml  .gitignore  README.md  hello.py  pyproject.toml
.cursor/rules/: be-mindful-of-path-formats-in-wsl.mdc  define-dependencies-in-modal-images.mdc  enforce-uv-for-project-management.mdc  keep-uv-lock-in-version-control.mdc  prefer-modal-classes-for-stateful-operations.mdc  remove-unused-imports.mdc  use-huggingface-hub-for-model-dataset-interactions.mdc  use-modal-for-gpu-intensive-tasks.mdc  use-pyproject-toml-for-metadata-and-dependencies.mdc
.notes/: directory_structure.md  project_overview.md  task_list.md  technical_specification.md
src/: __init__.py
src/cli/: __init__.py  main.py
src/cli/commands/: __init__.py  finetune.py  inpaint.py
src/config/: __init__.py  dataclasses.py  models.py
src/core/: __init__.py  config.py  finetune.py  image_generation.py  modal_setup.py
src/utils/: image_preprocessing.py
